--- a/app/src/main/res/layout/activity_create_recipes.xml
+++ b/app/src/main/res/layout/activity_create_recipes.xml
@@ -35,5 +35,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline"
-        tools:listitem="@layout/ingredient_item" />
+        tools:listitem="@layout/ingredient_item_in_recipe" />
 </androidx.constraintlayout.widget.ConstraintLayout>
