--- a/app/src/main/res/layout/ingredient_item_in_recipe.xml
+++ b/app/src/main/res/layout/ingredient_item_in_recipe.xml
@@ -61,7 +61,7 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="54dp" />
 
-        <TextView
+       <!-- <TextView
             android:id="@+id/ingredient_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -70,7 +70,7 @@
             app:layout_constraintBottom_toTopOf="@+id/guideline10"
             app:layout_constraintStart_toEndOf="@+id/ingredient_name"
             app:layout_constraintTop_toTopOf="@+id/guideline7"
-            android:autofillHints="Indtast mængde" />
+            android:autofillHints="Indtast mængde" />-->
 
         <TextView
             android:id="@+id/ingredient_category"
@@ -86,8 +86,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Button"
-            app:layout_constraintBottom_toTopOf="@+id/guideline10"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline6"
+            app:layout_constraintTop_toTopOf="@+id/guideline8" />
+
+        <Button
+            android:id="@+id/edit_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rediger"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/delete_button"
             app:layout_constraintTop_toTopOf="@+id/guideline8" />
 
 
