--- a/app/src/main/res/layout/activity_create_recipes_wip.xml
+++ b/app/src/main/res/layout/activity_create_recipes_wip.xml
@@ -104,7 +104,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ingredient_list"
+        android:id="@+id/ingredient_selection_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
