--- a/app/src/main/res/layout/select_ingerdient_dialog.xml
+++ b/app/src/main/res/layout/select_ingerdient_dialog.xml
@@ -6,40 +6,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
         android:id="@+id/multiItemSelectionSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginTop="48dp"
+        android:layout_margin="0dp"
+        android:layout_marginTop="40dp"
+        app:hintText="vælg ingrediens..."
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:hintText="vælg ingrediens..." />
-
+        app:layout_constraintTop_toBottomOf="@+id/spinner_ingredient_selection_name" />
 
     <EditText
-        android:id="@+id/spinner_ingredient_weight"
+        android:id="@+id/spinner_ingredient_selection_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:hint="Indtast mængde"
+        android:hint="Indtast navn på ingrediens"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/multiItemSelectionSpinner"/>
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/spinner_ingredient_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:hint="Indtast antal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_ingredient_weight" />
+        app:layout_constraintTop_toBottomOf="@+id/multiItemSelectionSpinner" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
