--- a/app/src/main/res/layout/select_ingerdient_dialog.xml
+++ b/app/src/main/res/layout/select_ingerdient_dialog.xml
@@ -7,17 +7,6 @@
     android:layout_height="match_parent">
 
 
-    <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
-        android:id="@+id/multiItemSelectionSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:layout_marginTop="40dp"
-        app:hintText="vælg ingrediens..."
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_ingredient_selection_name" />
-
     <EditText
         android:id="@+id/spinner_ingredient_selection_name"
         android:layout_width="wrap_content"
@@ -26,18 +15,50 @@
         android:hint="Indtast navn på ingrediens"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
+        android:id="@+id/multiItemSelectionSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="0dp"
+        app:hintText="vælg ingrediens..."
+        app:layout_constraintEnd_toEndOf="@+id/spinner_ingredient_selection_name"
+        app:layout_constraintStart_toStartOf="@+id/spinner_ingredient_selection_name"
+        app:layout_constraintTop_toBottomOf="@+id/space_filler" />
 
     <EditText
         android:id="@+id/spinner_ingredient_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:hint="Indtast antal"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/multiItemSelectionSpinner" />
+
+    <TextView
+        android:id="@+id/space_filler"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_ingredient_selection_name" />
+
+    <Button
+        android:id="@+id/save_spinner_ingredient_selection_button"
+        android:layout_width="23dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="12dp"
+        android:text="Gem"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toBottomOf="@+id/spinner_ingredient_selection_name"
+        app:layout_constraintStart_toEndOf="@+id/spinner_ingredient_selection_name"
+        app:layout_constraintTop_toTopOf="@+id/spinner_ingredient_selection_name"
+        app:layout_constraintVertical_bias="0.444" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
