--- a/app/src/main/res/layout/select_ingerdient_dialog.xml
+++ b/app/src/main/res/layout/select_ingerdient_dialog.xml
@@ -22,18 +22,18 @@
     <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
         android:id="@+id/multiItemSelectionSpinner"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="24dp"
         android:layout_margin="0dp"
         app:hintText="vælg ingrediens..."
-        app:layout_constraintEnd_toEndOf="@+id/spinner_ingredient_selection_name"
-        app:layout_constraintStart_toStartOf="@+id/spinner_ingredient_selection_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/space_filler" />
 
     <EditText
         android:id="@+id/spinner_ingredient_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:hint="Indtast antal"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,23 +42,21 @@
 
     <TextView
         android:id="@+id/space_filler"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="76dp"
+        android:layout_height="33dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_ingredient_selection_name" />
+        app:layout_constraintTop_toBottomOf="@+id/save_spinner_ingredient_selection_button" />
 
     <Button
         android:id="@+id/save_spinner_ingredient_selection_button"
-        android:layout_width="23dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="12dp"
-        android:text="Gem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Søg"
         android:textSize="8sp"
-        app:layout_constraintBottom_toBottomOf="@+id/spinner_ingredient_selection_name"
-        app:layout_constraintStart_toEndOf="@+id/spinner_ingredient_selection_name"
-        app:layout_constraintTop_toTopOf="@+id/spinner_ingredient_selection_name"
-        app:layout_constraintVertical_bias="0.444" />
+        app:layout_constraintEnd_toEndOf="@+id/spinner_ingredient_selection_name"
+        app:layout_constraintStart_toStartOf="@+id/spinner_ingredient_selection_name"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_ingredient_selection_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
