--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -2,23 +2,22 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_margin="4dp"
         app:cardCornerRadius="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:paddingStart="6dp"
+            android:paddingTop="4dp"
             android:paddingEnd="6dp"
-            android:paddingBottom="4dp"
-            android:paddingTop="4dp">
+            android:paddingBottom="4dp">
 
             <TextView
                 android:id="@+id/recipe_name"
@@ -34,14 +33,15 @@
             <TextView
                 android:id="@+id/recipe_price"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="5dp"
+                android:layout_height="19dp"
                 android:textAllCaps="false"
-                android:textColor="#000000"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/recipe_time_to_make" />
+                android:textColor="#FFFFFF"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@id/recipe_price_marker"
+                app:layout_constraintEnd_toEndOf="@+id/recipe_price_marker"
+                app:layout_constraintStart_toStartOf="@+id/recipe_price_marker"
+                app:layout_constraintTop_toTopOf="@id/recipe_price_marker"
+                android:translationZ="6dp"/>
 
             <TextView
                 android:id="@+id/recipe_time_to_make"
@@ -70,6 +70,17 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:srcCompat="@drawable/walking_dude" />
+
+            <ImageView
+                android:id="@+id/recipe_price_marker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="5dp"
+                android:translationZ="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/price_marker" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
