--- a/app/src/main/res/drawable/price_marker.xml
+++ b/app/src/main/res/drawable/price_marker.xml
@@ -6,5 +6,5 @@
     <corners
         android:radius="12dp"/>
     <solid
-        android:color="#3700B3"/>
+        android:color="@color/colorPrimaryDark"/>
 </shape>
