--- a/app/src/main/res/layout/ingredient_item_in_recipe.xml
+++ b/app/src/main/res/layout/ingredient_item_in_recipe.xml
@@ -7,7 +7,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="50dp">
 
         <CheckBox
             android:id="@+id/ingredient_checkbox"
