--- a/app/src/main/res/layout/dialog_ing_sel.xml
+++ b/app/src/main/res/layout/dialog_ing_sel.xml
@@ -62,6 +62,12 @@
         android:layout_height="0dp"
         android:layout_weight="0.5" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        app:srcCompat="@drawable/line" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/inglist_selected"
         android:layout_width="match_parent"
