--- a/app/src/main/res/layout/item_ing_sel.xml
+++ b/app/src/main/res/layout/item_ing_sel.xml
@@ -7,13 +7,16 @@
 
     <TextView
         android:id="@+id/ing_name_dialog"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
+        android:maxLines="2"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/ing_price_dialog"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
