--- a/app/src/main/res/layout/dialog_ing_sel.xml
+++ b/app/src/main/res/layout/dialog_ing_sel.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Antal"
-            android:inputType="textPersonName"
+            android:inputType="number"
             app:layout_constraintEnd_toStartOf="@+id/unit_spinner"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ingsel_name" />
