--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -8,12 +8,19 @@
     <item
         android:id="@+id/page_2"
         android:enabled="true"
-        android:icon="@drawable/shopping_cart_24px_outlined"
-        android:title="Favoritter"/>
+        android:icon="@drawable/map_24px"
+        android:title="Kort"/>
 
     <item
         android:id="@+id/page_3"
         android:enabled="true"
-        android:icon="@drawable/shopping_cart_24px_outlined"
-        android:title="Kort"/>
+        android:icon="@drawable/local_offer_24px_outlined"
+        android:title="Tilbud"/>
+
+    <item
+        android:id="@+id/page_4"
+        android:enabled="true"
+        android:icon="@drawable/favorite_24px_outlined"
+        android:title="Favoritter"/>
+
 </menu>
