--- a/app/src/main/res/layout/activity_create_recipe.xml
+++ b/app/src/main/res/layout/activity_create_recipe.xml
@@ -38,6 +38,15 @@
         app:layout_constraintTop_toBottomOf="@+id/recipe_title" />
 
     <View
+        android:id="@+id/divider4"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/ingredient_selection_list"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
         android:id="@+id/divider3"
         android:layout_width="0dp"
         android:layout_height="1dp"
@@ -74,8 +83,9 @@
         android:id="@+id/ingredient_list_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:text="Ingredienser"
+        android:textColor="@android:color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/ingredient_selection_list"
         app:layout_constraintTop_toBottomOf="@+id/divider3" />
@@ -91,7 +101,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ingredient_list_title"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:listitem="@layout/item_ingredient_in_recipe">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -114,9 +124,46 @@
         android:ems="10"
         android:hint="Opskrift titel"
         android:inputType="textCapSentences"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:text="Butik"
+        app:layout_constraintEnd_toEndOf="@+id/ingredient_selection_list"
+        app:layout_constraintTop_toBottomOf="@+id/ingredient_list_title" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:text="Pris"
+        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="19dp"
+        android:text="Mængde"
+        app:layout_constraintEnd_toEndOf="@+id/ingredient_selection_list"
+        app:layout_constraintStart_toStartOf="@+id/ingredient_selection_list"
+        app:layout_constraintTop_toTopOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="38dp"
+        android:text="Navn"
+        app:layout_constraintStart_toStartOf="@+id/ingredient_selection_list"
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
