Billigste ingrediens vises

--- a/app/src/main/res/anim/item_animation_fall_down.xml
+++ b/app/src/main/res/anim/item_animation_fall_down.xml
@@ -2,8 +2,8 @@
     android:duration="800">
     <!-- This animation was inspired by https://stackoverflow.com/questions/26724964/how-to-animate-recyclerview-items-when-they-appear -->
     <translate
-        android:fromYDelta="-100%"
-        android:toYDelta="0"
+        android:fromXDelta="-100%"
+        android:toXDelta="0"
         android:interpolator="@android:anim/decelerate_interpolator"
         />
 
