--- a/app/src/main/res/layout/item_ingredient_in_recipe.xml
+++ b/app/src/main/res/layout/item_ingredient_in_recipe.xml
@@ -7,7 +7,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="80dp">
 
         <CheckBox
             android:id="@+id/ingredient_checkbox"
@@ -21,14 +21,14 @@
 
         <TextView
             android:id="@+id/ingredient_namead"
-            android:layout_width="122dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:maxLines="1"
             android:text="Hakkede tomater"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ingredient_checkbox"
+            android:textSize="14sp"
+            app:layout_constraintStart_toEndOf="@+id/ingredient_amount"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -36,29 +36,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="5 dåser"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/ingsel_productname"
+            app:layout_constraintTop_toTopOf="@+id/ingredient_namead" />
 
         <TextView
             android:id="@+id/ingredient_pricead"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="16dp"
             android:text="240 kr"
-            android:textSize="12sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/ingredient_store_image"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.551" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/ingredient_store_image"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="8dp"
             android:src="@drawable/shopping_cart_24px_outlined"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +70,20 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/ingsel_productname"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/ingredient_pricead"
+            app:layout_constraintStart_toEndOf="@+id/ingredient_checkbox"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
