Ui changes in CreateRecipeActivity

--- a/app/src/main/res/layout/item_ingredient_in_recipe.xml
+++ b/app/src/main/res/layout/item_ingredient_in_recipe.xml
@@ -63,7 +63,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@drawable/ghetto" />
+            tools:srcCompat="@drawable/brugsen" />
 
         <View
             android:id="@+id/divider2"
