--- a/app/src/main/res/layout/dialog_view_ingredient.xml
+++ b/app/src/main/res/layout/dialog_view_ingredient.xml
@@ -9,6 +9,7 @@
         android:id="@+id/ingredient_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="229dp"
