--- a/app/src/main/res/layout/item_dialog_view_ingredient.xml
+++ b/app/src/main/res/layout/item_dialog_view_ingredient.xml
@@ -15,19 +15,18 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:maxLength="25"
+            android:ellipsize="end"/>
 
         <TextView
             android:id="@+id/ingredient_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
             android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageView3"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="@+id/ingredient_name"
+            app:layout_constraintTop_toBottomOf="@+id/ingredient_name" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -37,7 +36,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ghetto" />
+            app:srcCompat="@drawable/brugsen" />
+
+        <TextView
+            android:id="@+id/valuta"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:text="kr,-"
+            app:layout_constraintBottom_toBottomOf="@+id/ingredient_price"
+            app:layout_constraintStart_toEndOf="@+id/ingredient_price"
+            app:layout_constraintTop_toBottomOf="@+id/ingredient_name" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
